# racecar_eklavya

./: Blog.md  CMakeLists.txt  README.md  package.xml
config/: joint_names_racecar_updated_urdf.yaml
controller/: diff_drive.py  gesture_recognition.py  human_follow.py  human_follow_robot.py  imu_readings.py  laser_range.py  line_follower.py  obstacle_avoidance.py  obstacle_plus_line.py  teleop.py
launch/: laserscan_multi_merger.launch  robot_description.launch  world.launch
meshes/: FLW_Link.STL  FRW_Link.STL  RLW_Link.STL  RRW_Link.STL  base_link.STL  hokuyo.dae
racecar_notes/: Notes.md
sra_eklavya_racecar 2/: CMakeLists.txt  package.xml
sra_eklavya_racecar 2/config/: joint_names_sra_eklavya_racecar.yaml
sra_eklavya_racecar 2/launch/: display.launch  gazebo.launch
sra_eklavya_racecar 2/meshes/: FLW_Link.STL  FRW_Link.STL  RLW_Link.STL  RRW_Link.STL  base_link.STL
sra_eklavya_racecar 2/urdf/: sra_eklavya_racecar.csv  sra_eklavya_racecar.urdf
urdf/: my_robot.gazebo  my_robot.xacro  racecar_updated_urdf.csv  racecar_updated_urdf.urdf
worlds/: world01.world
